--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>scalajs-react components demo</title>
+    <title>Sri Extra Demo</title>
     <style>
         html {
             font-family:  sans-serif;
@@ -33,8 +33,7 @@
             top: 0;
             z-index: 1000000;
             opacity: 1;
-            /*background-color: #d35400;*/
-            background-color: #F76350;
+            background-color: #BB215A;
             -webkit-transition: background-color 0.4s ease-in-out 0s;
             -moz-transition: background-color 0.4s ease-in-out 0s;
             -ms-transition: background-color 0.4s ease-in-out 0s;
@@ -120,7 +119,7 @@
     loadingElement.className = "pg-loading-screen"
     loadingElement.innerHTML =
     "<div class=\"message\">"+
-    "<blockquote>\"Why join the navy when you can be a pirate\" - Steve Jobs</blockquote>"+
+    "<blockquote>\"We seek to reach the goal with the ego, but the goal exists before the ego\" - Maharshi</blockquote>"+
     "<div class=\"spinner\">"+
     "<div class=\"bounce1\"></div>"+
     "<div class=\"bounce2\"></div>"+
